# gecko

./: .env.example  .gitignore  LICENSE  README.md  bfcl_evaluate.py  index.html  pyproject.toml  requirements.txt  run_bfcl_multi.py  run_bfcl_single.py  run_gecko_server.py  script.js  styles.css
benchmarks/: __init__.py
benchmarks/base/: __init__.py  benchmark.py  evaluator.py  execution_result.py  test_case.py
benchmarks/bfcl/: __init__.py  benchmark.py  loader.py  prompts.py  tool_filtering.py  utils.py
data/openapi/: GorillaFileSystem.json
gats/: __init__.py
gats/core/: config.py  task.py
gats/engine/: runner.py  solver.py
gecko/: __init__.py
gecko/core/: __init__.py  request_handler.py  route_matcher.py  server.py
gecko/handlers/: session_handler.py
gecko/middleware/: route_middleware.py  session_middleware.py
gecko/schemas/: __init__.py  global_loader.py  loader.py
gecko/tools/: __init__.py  converter.py  manager.py
gecko/utils/: __init__.py  config_updater.py  config_utils.py  global_config.py  llm_usage.py  request_details.py  request_validator.py  response_generator.py  (+3 more)
inference/: client_engine.py  engine.py  example_generator.py  multi_turn_executor.py  multi_turn_executor_refactored.py
scripts/: generate_bfcl_real_api_schema.py  generate_bfcl_single_openapi.py  python_to_openapi.py
utils/: __init__.py  config_manager.py  conversation.py  conversation_memory.py  cost_tracker.py  env_loader.py  file_manager.py  model_utils.py  openapi_toolkit_fix.py  result_formatter.py  score_formatter.py  test_case_adapter.py  test_selector.py
(+79 files in other folders)
